# openfusion

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  openfusion.dev.yaml.example  openfusion.panel-tools.yaml.example  openfusion.panel.yaml.example  openfusion.preset.yaml.example  openfusion.yaml.example  pyproject.toml
.cursor/agents/: frontend-fusion-builder.md
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: FINDINGS.md  README.md  __init__.py  draco.py  draco_eval.py  research_eval.py  run.py
bench/tasks/: hard.jsonl  research.jsonl  sample.jsonl  smoke.jsonl
docs/: ARCHITECTURE.md  EMBEDDING.md  LANDING_PAGE.md  RELEASING.md
examples/: bench-vote.yaml.example  bench.yaml.example  default.yaml.example  draco.yaml.example  panel-strongsynth.yaml.example  preset.yaml.example  route.yaml.example
openfusion/: __init__.py  cache.py  cli.py  config.py  cost.py  credentials.py  errors.py  estimate.py  limits.py  metrics.py  outcomes.py  overrides.py  package-lock.json  panel.py  pipeline.py  pricing.py  ranked.py  responsecache.py  router.py  server.py  stream.py  synthesize.py  tools.py  upstream.py
openfusion/static/landing/: index.html  styles.css
openfusion/static/playground/: app.js  index.html  styles.css
openfusion/static/playground/assets/: index-B791TlXu.js  index-B9nNKmmQ.js  index-BCGOJ2Mz.js  index-BCSK5TY5.js  index-BE8NhMJ7.css  index-BKvlwi6K.css  index-BSz4bQkc.css  index-B_MwvFSj.js  index-BsgjuBvD.js  index-C3HL9D0h.js  index-CeM5sGYt.js  index-Cp3XPKRm.js  index-Ct8T-I4f.js  index-D9bA85pl.css  index-DDHKXn1h.js  index-DVWAFAHM.css  index-Dm45qAf0.js  index-DqCLCjM7.js  index-Jx66oiot.css  index-q9lW07-W.css  index-tiuO_XmI.js  index-vXWqGjD6.css  index-wij03RuQ.css
scripts/: openrouter_smoke.py
tests/: conftest.py  test_analysis.py  test_bench.py  test_bench_debate.py  test_cache.py  test_cli.py  test_config.py  test_cost.py  test_credentials.py  test_debate.py  test_disconnect.py  test_draco.py  test_embedding.py  test_errors.py  test_estimate.py  test_fallback.py  test_integration.py  test_landing_page.py  test_limits.py  test_metrics.py  test_onboarding.py  test_outcomes.py  test_overrides.py  test_panel.py  test_panel_429.py  test_panel_failures.py  test_pipeline_streaming.py  test_playground.py  test_pricing.py  test_ranked.py  test_research_eval.py  test_responsecache.py  test_router.py  test_security.py  test_server_config.py  test_server_openfusion_passthrough.py  test_server_pass_through.py  test_stream.py  test_stream_cancellation.py  test_synthesize.py  (+2 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/__tests__/: App.test.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx  textarea.tsx
web/src/lib/: api.ts
web/src/lib/__tests__/: api.test.ts  setup.ts
