[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfusion"
version = "0.1.0"
description = "Open-source, drop-in compound-model proxy with mixture-of-agents synthesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "openfusion contributors" }]
keywords = ["llm", "openai", "proxy", "mixture-of-agents", "fusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[project.scripts]
openfusion = "openfusion.cli:main"

[project.urls]
Homepage = "https://github.com/shahar-dagan/openfusion"
Repository = "https://github.com/shahar-dagan/openfusion"
Documentation = "https://github.com/shahar-dagan/openfusion/blob/main/DESIGN.md"

[tool.hatch.build.targets.wheel]
packages = ["openfusion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30

[tool.coverage.run]
source = ["openfusion"]
# cli.py is a Rich interactive terminal app; unit-testing it requires
# TTY/stdin mocking that adds more noise than signal.
omit = ["openfusion/static/*", "openfusion/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["openfusion/cli\\.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"openfusion/server.py" = ["B008"]
